<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pool Scorekeeper</string>
    <string name="game_chooser_screen_content">Let\'s Play Pool</string>
    <string name="title_activity_straight_pool_start">Let\'s Play Straight Pool</string>
    <string name="cowboy_pool_button">Cowboy</string>
    <string name="straight_pool_button">Straight Pool</string>
    <string name="straight_pool_rules_button">Straight Pool Rules</string>
    <string name="straight_pool_default_points_to_win">50</string>
    <string name="shot_made">Shot Made</string>
    <string name="shot_made_accessibility">Shot Made. Long-press to enter several balls on one shot</string>
    <string name="shot_made_long_press_hint">Long-press Shot Made to enter several balls on one shot</string>
    <string name="rack_prompt_title">New rack?</string>
    <string name="rack_prompt_one">One ball left on the table. Rack a new set?</string>
    <string name="rack_prompt_none">No balls left on the table. Rack a new set?</string>
    <string name="rack_yes">Rack \'em up</string>
    <string name="three_foul_title">Three consecutive fouls</string>
    <string name="three_foul_message">Third consecutive in-game foul: −16 this shot (−1 plus a 15-point penalty). Opening break fouls do not count. All 15 balls are re-racked. %1$s breaks.</string>
    <string name="ok">OK</string>
    <string name="balls_potted_title">Balls potted</string>
    <string name="safe_made">Safe</string>
    <string name="missed_shot">Miss</string>
    <string name="foul">Foul</string>
    <string name="total_points">Total Points</string>
    <string name="current_rack_total">Current Rack</string>
    <string name="safes_made">Safes Made</string>
    <string name="current_run">Current Run</string>
    <string name="longest_run">Longest Run</string>
    <string name="game_total">Score</string>
    <string name="default_player1Name">Minnesota Fats</string>
    <string name="default_player2Name">Fast Eddie</string>
    <string name="consecutive_fouls">Consecutive Fouls</string>
    <string name="total_fouls">Total Fouls</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="undo_symbol">&lt;</string>
    <string name="redo_symbol">&gt;</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="swap_players">Swap Players</string>
    <string name="whos_playing_title">Who\'s playing?</string>
    <string name="points_to_win">Points to Win?</string>
    <string name="points_needed">Needed to Win</string>
    <string name="play_new_game">Start New Game</string>
    <string name="new_game">New Game</string>
    <string name="game_summary">Game Summary</string>
    <string name="share">Share</string>
    <string name="no_apps_to_share">No apps available to share.</string>
    <string name="resume_game">Resume Game</string>
    <string name="general_pool_rules_button">General Rules of Pool</string>
    <string name="title_activity_score_straight_pool">Straight Pool Score Board</string>
    <string name="email_game_summary_button">Game Summary</string>
    <string name="default_balls_left_on_the_table">15 balls on the table</string>
    <string name="balls_left_on_the_table">balls on the table</string>
    <string name="one_ball_left_on_the_table">1 ball on the table</string>
    <string name="title_activity_cowboy_pool_start">Cowboy Pool</string>
    <string name="cowboy_default_points_to_win">50</string>
    <string name="cowboy_balls">Balls</string>
    <string name="cowboy_caroms_count">Caroms</string>
    <string name="cowboy_default_caroms">5</string>
    <string name="cowboy_reset">Reset</string>
    <string name="cowboy_reset_50">50/5</string>
    <string name="cowboy_reset_100">100/10</string>
    <string name="cowboy_last_shot">Cue ball last shot</string>
    <string name="cowboy_player_column">Player</string>
    <string name="cowboy_last_shot_short">Last</string>
    <string name="cowboy_yes">Yes</string>
    <string name="cowboy_no">No</string>
    <string name="cowboy_win_shot_title">Winning shot</string>
    <string name="cowboy_win_shot_rule">The last point is a carom of the cue ball off the 1-ball into a called pocket.</string>
    <string name="cowboy_win_shot_made">Made it</string>
    <string name="cowboy_foul_title">Foul</string>
    <string name="cowboy_foul_called">Inning points are lost and the turn is over.</string>
    <string name="cowboy_foul_pocket_caroms">Only caroms are allowed now. Pocketing a ball is a foul. Inning points are lost and the turn is over.</string>
    <string name="cowboy_foul_passed_mixed">Mixed scoring cannot go past %1$d. Inning points are lost and the turn is over.</string>
    <string name="cowboy_foul_passed_caroms">That shot went past %1$d. Inning points are lost and the turn is over.</string>
    <string name="cowboy_foul_not_win">The last point must be a carom of the cue ball off the 1-ball into a called pocket. Inning points are lost and the turn is over.</string>
    <string name="cowboy_players">Players</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="default_player3Name">Player 3</string>
    <string name="default_player4Name">Player 4</string>
    <string name="cowboy_ball_1">1</string>
    <string name="cowboy_ball_3">3</string>
    <string name="cowboy_ball_5">5</string>
    <string name="cowboy_carom">Carom</string>
    <string name="cowboy_multi">Multi</string>
    <string name="cowboy_multi_accessibility">Multiple points on one shot</string>
    <string name="cowboy_combo_title">One shot</string>
    <string name="cowboy_combo_balls">Balls</string>
    <string name="cowboy_combo_caroms">Caroms</string>
    <string name="cowboy_combo_enter">Enter</string>
    <string name="cowboy_combo_total">%1$d points</string>
    <string name="cowboy_win_shot">Win</string>
    <string name="cowboy_carom_accessibility">Carom. Long-press for a three-ball carom worth two points</string>
    <string name="cowboy_phase_mixed">Mixed scoring</string>
    <string name="cowboy_phase_caroms">Caroms only</string>
    <string name="cowboy_phase_win">Win shot off the 1</string>
    <string name="cowboy_rules_button">Cowboy Rules</string>
    <string name="default_inning_text">Inning #1</string>
    <string name="inning_title">Inning #</string>
    <string name="send_mail">Send mail…</string>
    <string name="no_email_clients">There are no email clients installed.</string>
    <string name="cowboy_not_implemented">Cowboy Pool is not implemented yet.</string>
    <string name="consecutive_safes_made">Consecutive Safes</string>
    <string name="time_on_table">Time on the table</string>
    <string name="turns">Turns</string>
    <string name="avg_turn">Average turn</string>
    <string name="shots">Shots</string>
    <string name="avg_shot">Average shot</string>
</resources>
